Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1240

proton::connection::virtual_host not filled in on server side.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.13.0
    • proton-0.14.0
    • cpp-binding
    • None

    Description

      The trivial server code:

      #include <proton/default_container.hpp>
      #include <proton/messaging_handler.hpp>
      
      #include <iostream>
      
      class ExampleHandler: public proton::messaging_handler {
          void on_container_start(proton::container& c) override {
              c.listen("localhost:5672");
          }
      
          void on_connection_open(proton::connection& c) override {
              std::cout << "New incoming connection to " << c.virtual_host() << "\n";
          }
      };
      
      int main() {
          ExampleHandler h;
          proton::default_container(h).run();
      }
      

      Produces output:

      New incoming to 
      

      When another trivial C++ client connects to it.

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: