PROTON-1240: Fill in connection::virtual_host() with remote connection host field