proton-c/bindings/cpp/src/connection.cpp
@@ -63,7 +63,7 @@ void connection::open(const connection_options &opts) {
 void connection::close() { pn_connection_close(pn_object()); }
 
 std::string connection::virtual_host() const {
-    return str(pn_connection_get_hostname(pn_object()));
+    return str(pn_connection_remote_hostname(pn_object()));
 }
 
 std::string connection::container_id() const {
